# axon_quant

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  README_CN.md  README_EN.md  mkdocs-en.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  rust-toolchain.toml
crates/axon-backtest/: Cargo.toml
crates/axon-backtest/src/: engine.rs  lib.rs
crates/axon-backtest/src/impact/: impacted_engine.rs  mod.rs
crates/axon-backtest/src/matching/: arena.rs  engine.rs  l2.rs  mod.rs  router.rs  tracker.rs
crates/axon-backtest/src/python/: engine.rs  error.rs  impact.rs  matching.rs  matching_l1.rs  matching_l2.rs  matching_l3.rs  mod.rs  types.rs
crates/axon-backtest/src/streaming/: data_source.rs  engine.rs  l3_diff.rs  metrics.rs  mod.rs  paper_trading.rs  report.rs  strategy.rs
crates/axon-backtest/tests/: README.md  backtest_e2e_correctness.rs  concurrent_backtest.rs  csv_replay_integration.rs  e2e_0_7_0_hotfix_spot_swap_dispatch.rs  e2e_cancel_amend.rs  e2e_exchange_stream_source.rs  e2e_fills_detail.rs  e2e_force_liquidate.rs  e2e_impact_integration.rs  e2e_multi_symbol.rs  e2e_order_type_matrix.rs  e2e_per_leg_seed_liquidity.rs  e2e_risk_metrics.rs  e2e_seed_liquidity.rs  e2e_sma_crossover.rs  e2e_streaming_paper.rs  edge_events_validation.rs  fee_config_boundaries.rs  impact_breakdown.rs  l2_engine_e2e.rs  l3_integration.rs  l3_snapshot_restore.rs  nav_dd_consistency.rs  negative_validation.rs  paper_partial_fill_test.rs  perf_1000_bar_replay.rs  python_matching_engine_trait.rs  replace_engine_e2e.rs  replay_source_integration.rs  run_result_fields.rs  sharpe_winrate_edge.rs  state_machine_deep.rs  streaming_metrics_e2e.rs  streaming_report_e2e.rs  stress_0_7_0.rs  test_fills_detail.rs  test_l3_full_visibility.rs  test_subscribe.rs  test_with_seed.rs  (+1 more)
crates/axon-compliance/: Cargo.toml
crates/axon-compliance/src/: lib.rs  types.rs
crates/axon-compliance/src/python/: error.rs  mod.rs  (+2 more)
crates/axon-compliance/tests/: e2e_report_generation.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: harness_types.rs  lib.rs  python_utils.rs
crates/axon-data/: Cargo.toml
crates/axon-data/src/: lib.rs  service.rs
crates/axon-data/tests/: data_test.rs  e2e_data_pipeline.rs  python_spike.rs  service_stream_integration.rs
crates/axon-defi/: Cargo.toml
crates/axon-defi/src/: error.rs  lib.rs  types.rs
crates/axon-defi/tests/: bridge_layerzero.rs  error_types.rs  evm_erc20.rs  evm_erc20_write.rs  evm_multicall.rs  evm_provider.rs  evm_signer.rs  evm_v3_pool.rs  evm_v3_quoter.rs  evm_v3_router.rs
crates/axon-distributed/: Cargo.toml
crates/axon-distributed/config/: default_distributed.toml
crates/axon-distributed/src/: actor.rs  checkpoint.rs  config.rs  error.rs  lib.rs  param_server.rs
crates/axon-ensemble/: Cargo.toml
crates/axon-ensemble/src/: lib.rs
crates/axon-ensemble/tests/: e2e_ensemble_pipeline.rs
crates/axon-exchange/: Cargo.toml
crates/axon-exchange/src/: error.rs  lib.rs  lifecycle.rs  rate_limiter.rs  traits.rs  types.rs
crates/axon-exchange/tests/: e2e_adapter_parsing.rs  exchange_test.rs
crates/axon-explain/: Cargo.toml
crates/axon-explain/src/: lib.rs  report.rs
crates/axon-explain/tests/: report_test.rs
crates/axon-harness/: Cargo.toml
crates/axon-harness/src/: audit.rs  bridge.rs  circuit_breaker.rs  default_policy.rs  lib.rs  observer.rs  policy.rs  rbac_gate.rs  simple_budget.rs  types.rs
crates/axon-harness/tests/: e2e_harness_pipeline.rs  integration_tests.rs
crates/axon-hpo/: Cargo.toml
crates/axon-hpo/config/: default_hpo.toml
crates/axon-hpo/src/: config.rs  error.rs  lib.rs  pareto.rs  result.rs  search_space.rs  trial.rs
crates/axon-hpo/tests/: e2e_hpo_pipeline.rs
crates/axon-inference/: Cargo.toml
crates/axon-inference/src/: affinity.rs  engine.rs  error.rs  hot_reload.rs  lib.rs  types.rs
crates/axon-inference/tests/: inference_test.rs  integration_test.rs  test_multi_leg_action.rs
crates/axon-integration-tests/: Cargo.toml
crates/axon-integration-tests/src/: contract.rs  delta_neutral_arb.rs  distributed_flow.rs  fuzz.rs  hpo_flow.rs  lib.rs  matching_flow.rs  phase4_e2e.rs  tracker_registry_flow.rs  walkforward_flow.rs
crates/axon-integration-tests/tests/: integration_tests.rs
crates/axon-llm/: Cargo.toml
crates/axon-llm/examples/: integrated_trading_demo.rs  live_trading_demo.rs  live_trading_e2e.rs
crates/axon-llm/src/: config.rs  declarative_agent.rs  lib.rs
crates/axon-llm/tests/: compute_explanation_tool_test.rs  decision_recorder_test.rs  e2e_common_smoke_test.rs  e2e_explain_e2e_test.rs  explain_integration_test.rs  explainer_bridge_test.rs  live_trading_e2e_test.rs  python_binding_test.rs  trading_cancel_replace_integration.rs  trading_circuit_breaker_integration.rs  trading_exchange_integration.rs  trading_exchange_testnet.rs  trading_integration.rs  trading_max_position_integration.rs  trading_metrics_integration.rs  trading_oms_integration.rs
crates/axon-monitor/: Cargo.toml
crates/axon-monitor/src/: alert.rs  error.rs  health.rs  lib.rs  metrics.rs  registry.rs
crates/axon-oms/: Cargo.toml
crates/axon-oms/src/: error.rs  lib.rs  manager.rs  portfolio.rs  types.rs
crates/axon-oms/tests/: e2e_order_lifecycle.rs  oms_test.rs  snapshot_compat.rs
crates/axon-python/: Cargo.toml
crates/axon-python/src/: error.rs  harness.rs  lib.rs
crates/axon-risk/: Cargo.toml
crates/axon-risk/src/: circuit_breaker.rs  config.rs  engine.rs  error.rs  handler.rs  lib.rs  metrics.rs  portfolio.rs
crates/axon-risk/tests/: integration_test.rs  risk_test.rs
crates/axon-rl/: Cargo.toml
crates/axon-rl/src/: lib.rs
crates/axon-rl/tests/: e2e_rl_pipeline.rs
crates/axon-safety/: Cargo.toml
crates/axon-safety/src/: audit.rs  circuit_breaker.rs  lib.rs  position.rs
crates/axon-walk-forward/: Cargo.toml
crates/axon-walk-forward/config/: default_wf.toml
crates/axon-walk-forward/src/: config.rs  error.rs  evaluation.rs  lib.rs  metrics.rs  purge.rs  split.rs
crates/axon-walk-forward/tests/: e2e_walk_forward_pipeline.rs
(+446 files in other folders)
