[workspace]
resolver = "2"
# 工作区成员：按阶段逐步引入，Phase 0 仅含最小骨架
members = [
    "crates/axon-core",
    "crates/axon-backtest",
    "crates/axon-rl",
    "crates/axon-hpo",
    "crates/axon-walk-forward",
    "crates/axon-cli",
    "crates/axon-distributed",
    "crates/axon-tracker",
    "crates/axon-registry",
    "crates/axon-llm",
    "crates/axon-explain",
    "crates/axon-ensemble",
    "crates/axon-data",
    "crates/axon-compliance",
    "crates/axon-risk",
    "crates/axon-inference",
    "crates/axon-exchange",
    "crates/axon-oms",
    "crates/axon-monitor",
    "crates/axon-defi",
    "crates/axon-integration-tests",
    "crates/axon-python",
]

# 统一的目标目录，加速增量编译
[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.96.0"
license = "Apache-2.0"
repository = "https://github.com/pengwow/axon_quant"
homepage = "https://github.com/pengwow/axon_quant"
documentation = "https://github.com/pengwow/axon_quant"

# 统一作者信息
authors = ["pengwow <pengwow@hotmail.com>"]

# Workspace 级别的共享依赖，方便各 crate 引用同一版本
[workspace.dependencies]
# 内部 crate
axon-core = { path = "crates/axon-core" }
axon-backtest = { path = "crates/axon-backtest" }
axon-rl = { path = "crates/axon-rl" }
axon-hpo = { path = "crates/axon-hpo" }
axon-walk-forward = { path = "crates/axon-walk-forward" }
axon-distributed = { path = "crates/axon-distributed" }
axon-tracker = { path = "crates/axon-tracker" }
axon-registry = { path = "crates/axon-registry" }
axon-explain = { path = "crates/axon-explain" }
axon-ensemble = { path = "crates/axon-ensemble" }
axon-defi = { path = "crates/axon-defi" }
axon-llm = { path = "crates/axon-llm" }
axon-exchange = { path = "crates/axon-exchange" }
axon-oms = { path = "crates/axon-oms" }
# Stage 6:推理引擎(ONNX/Candle/Tch 后端,批推理管线,模型热更新)
axon-inference = { path = "crates/axon-inference" }
# 金融交易合规审计模块
axon-compliance = { path = "crates/axon-compliance" }
# Stage D / J 简化版:demo + E2E 测试中桥接 CircuitBreaker,lib 零传递依赖
axon-risk = { path = "crates/axon-risk" }
# Stage 1:数据服务(数据源、缓存、Arrow IPC)
axon-data = { path = "crates/axon-data" }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志 / 追踪
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 并发原语
crossbeam-channel = "0.5"
dashmap = "6"
parking_lot = "0.12"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 异步
async-trait = "0.1"

# 加密 / 哈希
sha2 = "0.10"

# 时间
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# UUID
uuid = { version = "1.10", features = ["v4"] }

# 数值类型
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"

# 随机数（用于延迟/冲击模型采样）
rand = "0.8"

# 测试辅助
proptest = "1.4"
pretty_assertions = "1.4"
tempfile = "3"

# 列式存储(PR3 M2 引入)
# Stage 1 spike 验证后,arrow 53 → 57 以兼容 pyo3-arrow 0.16 + pyo3 0.28
# (2026 年新版本;arrow 53 时代的 pyo3-arrow 0.14 锁 pyo3 0.26,与 workspace 冲突)
arrow = "57"
parquet = { version = "57", default-features = false, features = ["arrow", "snap", "brotli", "flate2", "flate2-rust_backened", "lz4", "zstd"] }

# Workspace 级 profile 配置
[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# Dev profile 启用调试符号便于 cargo test
[profile.dev]
debug = true
opt-level = 0

# Benchmark profile
[profile.bench]
debug = true
opt-level = 3
