[package]
name = "axon-backtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "AXON 回测引擎：事件队列、撮合、延迟、费用模型 + 市场冲击集成（Phase 1A / Phase 4 阶段填充）"

[features]
default = []
# L2 复杂订单簿（Phase 1A 后启用）
l2 = []
# L3 多资产交叉（Phase 1A 后启用）
l3 = []
# PyO3 Python 绑定
python = ["dep:pyo3"]

[dependencies]
axon-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
async-trait = "0.1"

# Python 绑定
pyo3 = { version = "0.28", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

# 同时生成 cdylib（供 Python `import axon_backtest` 使用）和 rlib（供 Rust crate 引用）
[lib]
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "impact_bench"
path = "../../benches/impact_bench.rs"
harness = false
