[package]
name = "axon-backtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "AXON 回测引擎：事件队列、撮合、延迟、费用模型 + 市场冲击集成（Phase 1A / Phase 4 阶段填充）"

[features]
default = []
# L2 复杂订单簿（Phase 1A 后启用）
l2 = []
# L3 多资产交叉（Phase 1A 后启用）
l3 = []
# PyO3 Python 绑定(`axon_quant.backtest` 子模块)
#
# 注:Stage 2 加 `pyo3-arrow` 0.16(arrow RecordBatch 零拷贝桥)
# + `arrow` 57(workspace 统一)用于 BacktestEngine 批量成交结果导出
# (`RunResult::trades_arrow` / `MatchFill` 流)。
#
# 注:**不**加 `arrow-pyarrow`(arrow-pyarrow 57 锁 pyo3 0.26 与
# workspace pyo3 0.28 `pyo3-ffi links=python` 冲突,Stage 1 实战发现)。
# 走 `pyo3-arrow 0.16` 路径:Python 端 `into_pyarrow()` 经 Arrow C data
# interface 零拷贝。详见 `crates/axon-data/Cargo.toml` 的 `python`
# feature 注释 + `.axon-internal/plans/2026-06-19-python-bindings-expansion-s2-axon-backtest.md`
# Task 2 Errata。
python = ["dep:pyo3", "dep:pyo3-arrow", "dep:arrow", "axon-core/python-utils"]

[dependencies]
axon-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
async-trait = "0.1"
# 0.4.0:CSV 真实回放(axon-data 已用同版本,workspace 命中可复用编译缓存)
csv = "1.3"
# 0.4.0:PaperTradingEngine partial fill 裁决用(seed 化 rng)
rand = { workspace = true }

# Stage 2:列式存储桥(arrow 57,workspace 统一)
# `optional = true` 让非 `python` feature 时不引入,避免对纯 Rust 用户造成编译开销
arrow = { workspace = true, optional = true }

# Python 绑定
#
# 注:启用 `auto-initialize` feature 以让 `cargo test` 内部的 `#[test]` 调
# `Python::attach(...)` 时自动初始化解释器(否则 `cargo test` 嵌入式
# Python 不会自动 init,需每个测试手工调 `Python::initialize()`,体验差)。
# 在 cdylib 模式下,axon-python 加载 `_native.so` 时 Python 解释器已就绪,
# `auto-initialize` 是 no-op 不会重复 init,所以不冲突。
#
# 详见 `.axon-internal/plans/2026-06-19-python-bindings-expansion-s1-axon-data.md`
# Task 2 + `crates/axon-data/Cargo.toml` 注释。
pyo3 = { version = "0.28", optional = true, features = ["auto-initialize"] }
# Stage 2:PyO3 Arrow 桥(zero-copy RecordBatch)
# 0.16 支持 pyo3 0.28 + arrow 57(Stage 1 实战升级决定)
pyo3-arrow = { version = "0.16", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
# tokio 宏 + runtime,给 `#[tokio::test]` 异步测试用
# (streaming 模块的 data_source.rs 用 async fn next_event,需要 tokio runtime)
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
# 0.4.0:CSV 回放测试用临时文件
tempfile = { workspace = true }
# 0.4.0:`futures::executor::block_on` 用于在同步测试中跑 async fn
# (csv_replay_integration.rs 的 `next_event().await` 在 `#[test]` 块中跑)
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }

# 同时生成 cdylib（供 Python `import axon_backtest` 使用）和 rlib（供 Rust crate 引用）
[lib]
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "impact_bench"
path = "../../benches/impact_bench.rs"
harness = false
