[package]
name = "axon-compliance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "金融交易合规审计模块"

[dependencies]
# 核心依赖
axon-core = { path = "../axon-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
csv = "1.3"

# 可选依赖
pyo3 = { version = "0.28", optional = true }
toml = "0.8"

[features]
default = []
# Python 绑定:依赖 axon-core 的 `python-utils` feature 拿 py_exception! / dict_field! / parse_py_enum! 宏
python = ["pyo3", "axon-core/python-utils"]

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
