[package]
name = "axon-defi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "DeFi 链上交易：EVM 链适配器、Uniswap V3、MEV-Share、LayerZero 跨链"

[features]
# 默认启用 evm:axon-defi 的核心价值是 EVM 真链交互,默认关会导致
# `cargo clippy --workspace --all-targets` 在 default 模式下编译失败
# (lib.rs 的 mod evm/bridge/dex/mev 都引用了 alloy,必须在某个 feature 下编译)。
# 下游依赖:axon-python 通过 `features = ["python"]` 隐含 evm,无重复编译成本。
default = ["evm"]
# EVM 真链接入:引入 alloy-rs,启用 `evm` feature 后才能用 evm::* 模块
evm = ["dep:alloy", "dep:alloy-primitives"]
# Python 绑定:自动启用 evm,使 `#[cfg(feature = "evm")]` 走真链分支,
# 避免依赖方忘了写 `features = ["python", "evm"]`
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "evm", "axon-core/python-utils"]

# ----------------------------------------------------------------------------
# 已知 future-incompat 警告(2026-07-11 跟踪)
# ----------------------------------------------------------------------------
# 编译时会触发:
#   warning: the following packages contain code that will be rejected by a
#            future version of Rust: proc-macro-error2 v2.0.1
# 原因:`alloy-sol-macro` (→ alloy → axon-defi/evm) 依赖 `proc-macro-error2 ^2`,
#       其 src/lib.rs:494 `pub use proc_macro;` 触发了 rust-lang/rust#127909
#       (extern crate 私有 re-export 在未来 Rust 版本会变 hard error)。
# 跟踪状态:
#   - `proc-macro-error2` 上游已 archived (2026-06-07),无新版本
#   - 替代品 `proc-macro-error3 v3.0.2` 已修复,但 alloy-sol-macro 1.6.0 仍硬钉
#     `proc-macro-error2 ^2`,alloy 短期内不会切
#   - 目前是 warning,不影响 CI(`-D warnings` 不针对 compiler future-incompat)
# 处理策略:不做任何处理,等 alloy 升级后再 bump。
# 下次重评:每 6 个月(2026-12 / 2027-06)或 alloy 切到 proc-macro-error3 时
# 重新评估,必要时用 `[patch.crates-io]` 临时绕过。
# ----------------------------------------------------------------------------

[dependencies]
# 内部依赖
axon-core = { path = "../axon-core" }
axon-exchange = { path = "../axon-exchange" }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

# 时间
chrono = { workspace = true }

# 异步
tokio = { workspace = true }
async-trait = "0.1"

# EVM 真链交互(可选,feature-gated)
alloy = { version = "1.0", optional = true, features = [
    "providers",
    "signers",
    "signer-local",
    "contract",
    "rpc-types-eth",
    "transports",
    "eips",
    "sol-types",
] }
alloy-primitives = { version = "1.0", optional = true }
url = "2.5"

# Python 绑定（可选）
pyo3 = { version = "0.28", optional = true, features = ["auto-initialize"] }
# 异步 Python 绑定 helper:future_into_py
pyo3-async-runtimes = { version = "0.28", optional = true, default-features = false, features = ["tokio-runtime"] }

# HTTP 客户端:MEV-Share / Flashbots relay `eth_sendBundle` 走 reqwest
# 走生产依赖(不只 dev)因为 `mev::share::submit_transaction` 是真生产代码
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
