[package]
name = "axon-distributed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "AXON 分布式训练：Ray 集成 + RLLib 训练封装 + Parameter Server + Checkpoint 容错（Phase 2 P2 阶段填充）"

[features]
default = []
# PyO3 绑定（默认禁用，启用需 python toolchain）
python = ["dep:pyo3"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }

# Python 绑定
pyo3 = { version = "0.28", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
toml = "0.8"

# 同时生成 cdylib（供 Python `import axon_distributed` 使用）和 rlib（供 Rust crate 引用）
[lib]
crate-type = ["rlib", "cdylib"]
