[package]
name = "axon-ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "AXON 模型集成引擎：硬投票/软投票/加权/堆叠/动态加权（Phase 3 P0 阶段填充）"

[features]
default = []
python = ["dep:pyo3", "axon-core/python-utils"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
axon-core = { path = "../axon-core", optional = true }

# Python 绑定（可选）
pyo3 = { version = "0.28", optional = true, features = ["auto-initialize"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
