[package]
name = "axon-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "推理引擎：ONNX/tch/Candle 后端，批推理管线，模型热更新"

[dependencies]
axon-core = { path = "../axon-core" }
tokio = { version = "1", features = ["sync", "time", "fs", "macros", "rt"] }
rayon = "1.10"
parking_lot = "0.12"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
sha2 = "0.10"
pyo3 = { version = "0.28", features = ["auto-initialize"], optional = true }

# 可选后端依赖
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls"] }
tch = { version = "0.24", optional = true }
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
notify = { version = "7", optional = true }
core_affinity = "0.8"

[features]
# onnx 不在默认 features 中，避免 CI macOS 链接错误（ort download-binaries 与 Xcode 不兼容）
# 使用时显式启用：cargo build -p axon-inference --features onnx
default = ["hot-reload"]
onnx = ["dep:ort"]
tch-backend = ["dep:tch"]
candle-backend = ["dep:candle-core", "dep:candle-nn"]
hot-reload = ["dep:notify"]
# Python 绑定(Stage 6):默认带 onnx 后端(最常用,生产环境主推)
# Candle 后端可单独启用: `cargo build -p axon-inference --features python --features candle-backend`
# 设计约束:InferenceError 继承 builtin `PyException` 而非 `AxonError`,
# 避免 `axon-inference` 反向依赖 `axon-python` 造成 cargo 循环
# (同 backtest / risk / oms / exchange,详见 design spec §3.1.6)。
python = ["dep:pyo3", "onnx", "hot-reload", "axon-core/python-utils"]

[dev-dependencies]
pretty_assertions = "1"
tempfile = { workspace = true }
serde_json = { workspace = true }
